src/lib/codegen/components/snapshots/csx__lib__codegen__components__snapshot_indexer__tests__snapshot_outputs_chain-3.snap
---
source: src/lib/codegen/components/snapshot_indexer.rs
expression: "&manifest.generate_scripts(Network::Local).unwrap()"
---
#!/bin/bash
# init
dfx canister  call sample_snapshot_indexer_chain init_in '(variant { "LocalDevelopment" })'
# setup
dfx canister  call sample_snapshot_indexer_chain setup "(
    \"6b175474e89094c44da98b954eedeac495271d0f\",
    record {
        url = \"https://mainnet.infura.io/v3/<YOUR_KEY>\";
        from = null;
        chain_id = 1;
        env = variant { LocalDevelopment };
    }
)"
# set_task
dfx canister  call sample_snapshot_indexer_chain set_task '(3600, 0)'

